@@ -86,6 +86,16 @@
                 
                 </li>
 
+                <li class="navTreeItem visualNoMarker navTreeFolderish section-test-empty">
+                
+                        <a title="" class="state-published navTreeFolderish contenttype-folder"
+                           href="/Plone/test-empty">
+                            
+                            <span>Test empty</span>
+                        </a>
+                
+                </li>
+
             </ul>
             <span class="portletBottomLeft"></span>
             <span class="portletBottomRight"></span>
