@@ -10,10 +10,14 @@ Changelog
   (close `#3`__) [keul]
 - added a way to invalidate JS cache
   (close `#1`__) [keul]
+- now general selectors can match also elements that are not <a>, but
+  link's contents
+  (close `#4`__) [keul]
 
   __ https://github.com/RedTurtle/collective.navigationtoggle/issues/2
   __ https://github.com/RedTurtle/collective.navigationtoggle/issues/3
   __ https://github.com/RedTurtle/collective.navigationtoggle/issues/1
+  __ https://github.com/RedTurtle/collective.navigationtoggle/issues/4
 
 0.4.0 (2012-11-15)
 ------------------
